# ChangeLog for dev-perl/IO-Socket-SSL
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.184 2013/02/19 05:07:50 zmedico Exp $

  19 Feb 2013; Zac Medico <zmedico@gentoo.org> IO-Socket-SSL-1.830.0.ebuild:
  Add ~arm-linux keyword.

*IO-Socket-SSL-1.830.0 (10 Feb 2013)

  10 Feb 2013; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.830.0.ebuild:
  Version bump

*IO-Socket-SSL-1.820.0 (28 Jan 2013)

  28 Jan 2013; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.820.0.ebuild:
  Version bump

  06 Jan 2013; Torsten Veller <tove@gentoo.org> -IO-Socket-SSL-1.760.0.ebuild,
  -IO-Socket-SSL-1.770.0.ebuild:
  Cleanup

*IO-Socket-SSL-1.810.0 (08 Dec 2012)

  08 Dec 2012; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.810.0.ebuild:
  Version bump

*IO-Socket-SSL-1.770.0 (07 Oct 2012)

  07 Oct 2012; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.770.0.ebuild:
  Version bump

  02 Sep 2012; Torsten Veller <tove@gentoo.org> -IO-Socket-SSL-1.540.0.ebuild,
  -IO-Socket-SSL-1.580.0.ebuild, -IO-Socket-SSL-1.590.0.ebuild,
  -IO-Socket-SSL-1.620.0.ebuild, -IO-Socket-SSL-1.640.0.ebuild,
  -IO-Socket-SSL-1.660.0.ebuild, -IO-Socket-SSL-1.700.0.ebuild,
  -IO-Socket-SSL-1.710.0.ebuild, -IO-Socket-SSL-1.730.0.ebuild,
  -IO-Socket-SSL-1.740.0.ebuild, -IO-Socket-SSL-1.750.0.ebuild:
  Cleanup

*IO-Socket-SSL-1.760.0 (23 Jun 2012)

  23 Jun 2012; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.760.0.ebuild,
  metadata.xml:
  Version bump

*IO-Socket-SSL-1.750.0 (16 Jun 2012)

  16 Jun 2012; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.750.0.ebuild:
  Version bump

*IO-Socket-SSL-1.740.0 (14 May 2012)

  14 May 2012; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.740.0.ebuild:
  Version bump

*IO-Socket-SSL-1.730.0 (12 May 2012)

  12 May 2012; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.730.0.ebuild:
  Version bump

*IO-Socket-SSL-1.710.0 (09 May 2012)
