@@ -5,16 +5,18 @@ DIST IO-Socket-SSL-1.44.tar.gz 69342 SHA256 8fd6603b4187660553d995f5cfa1a7423201
 DIST IO-Socket-SSL-1.81.tar.gz 76744 SHA256 3ee96f16ca4c4e1ce1bbd9a9e32bfeea3c1c635753caee86146afc7dec95e7ed SHA512 2322dee831e84174ee12ea116485f99235057cdb34dbbbd74dad77dc45438887ddbf68e2763ba388abb9da134743f8e9e290ce338433f4188011cf9c17e45fe0 WHIRLPOOL a9dc7457a3152bc3b9e2ff42e73cad74fd1eef08548ce52dd327b3287fecccd9b6636b0ef9aa8ab680876f3bf0d4cbe868771bc7462f98fb37dfcf72a299ed21
 DIST IO-Socket-SSL-1.82.tar.gz 77330 SHA256 625446f135f295c6b36d76fa1476e976731e14b2f733fbb11628499a12f04789 SHA512 b430b8b27ff05ade9629cb0ad496d7fb9021ea45e015a26fb012842e6ccc43c936d4a2b1ef84c41466392c94980dfc5b16639c7012a882458e87e60851820334 WHIRLPOOL 58bf27e349f4a5fe57e1747066374d6d4272f781a3f8d047497ca5de59cd388cb4790e36ed626be95b145e0905b8f587a4b50685bf18d0b838ec1bd60eb250d8
 DIST IO-Socket-SSL-1.83.tar.gz 79292 SHA256 40c450e299d1a3552c3816b81a9f05d54c887c8176005786aa29240a71735e0d SHA512 cbe778e8ffc98a95652e340c64cad57cfd32a7a625f6aac1ac69966846a625d5c8c3d14d447e3e17d954057ac017cfa74f241eaae21820627cf6c0c570093b8d WHIRLPOOL 47b0ee02d611a4ef0435521f1c5432674ea864b75ec5b398c881826688111481a71be1a19e16dec77d2b6ff733a72b28307f3be79089d2cf7c62fdb1ed1b3d71
+DIST IO-Socket-SSL-1.84.tar.gz 80035 SHA256 31aa31998e968eaff60554c036870eb1a007bca686666fca1fb3bc19cb3d528c SHA512 bf8120b9e10ccfcb7f9061b627dbd3e1426e11e4f9f4b0d3fe678fd599d04126704e7464fe35f18c685d026d2945ee77901df5da694e8dafaa554c36506a5cd6 WHIRLPOOL 9412ab10506491964f0c7c24a0adfb1783bf082c372fe230b2bea9cb919476d0f5b90423ccd9e32476657e0ae1051b2aef3d503459ad04e534e3e4a9a99dc150
 EBUILD IO-Socket-SSL-1.440.0.ebuild 842 SHA256 743f4c1f4232dc43b280e4d3ead45958343b236c1ce8abfcdadcbde9aefb2bb0 SHA512 1c602e3530ddec6e969c8f9a0a027776991f6a1117e4d31e66fe0a072b22ef025a2bdaf53db59a8538f8f110e70f0965d1e963a911b599a47f5684d05788ae39 WHIRLPOOL a97740cd69dd3690e8cee19606c90bbafaafb59d6e68dc63e8371e6f9593bf5be69df368a9df9cf4802fa75ac64a38820d147e18ca6b5d19f2c9b6072d84f112
 EBUILD IO-Socket-SSL-1.810.0.ebuild 867 SHA256 396e268a45f931848dccc5c12debac8d1ef6bbf58c98000b9dd0c237327509cb SHA512 ad1a377c2a0c97eb4c75244fafaebab607053c7d36e72725c60f4f6562e6982f1ac8b9989db7bd97f68431dd238fcf39b6c5fe01cfcad78a3f86d7e44ba5d55e WHIRLPOOL 92b375ec010cef3c87fd092d597bb30b8edf2f593f0fc6df327af42aa703730baa3192434ee85f23e1fe963a71d10d089f5b132d38a24f23204a5416d908d06b
 EBUILD IO-Socket-SSL-1.820.0.ebuild 867 SHA256 12d31c625e8c0252f810087cb5c963c3dc42e6729313be985426bf9262d4b27e SHA512 0387050a6a84f91f9ff5985117bb27a6c3f3188d061ab21f36cb4b1ca4d982cfca455abb8507b5367e7487a106c934e38e6d901a895ee7b9ea5621289ff6ed24 WHIRLPOOL e207e9151fa6f6ff0d5908e55e8b491101f0f9a28599ee352b08757af837984b567d88bfacca16c0df157737349b0d553a29e0d84251b108863eb39b01beb9d3
 EBUILD IO-Socket-SSL-1.830.0.ebuild 881 SHA256 2a994df49b25d0172e08edf99266a5d45a37b28f46d932093d6e8c01ee2f6e12 SHA512 b68ed237ba7ca0dc44e168472d69b14db4aa2eb20eb2e9861ffeccfe28596b776fc5d3649ea771709aede3da23ab47c6a14979a1c4bd010a311c46772978c537 WHIRLPOOL cb10a635b8fc7bebc406e5fd2b81a55e2186ee2f501d748150cce37bbc3138719478a9fde3a195361233bb6f0dc3ec5d0e86c34797a06b27ed7976b9ee4123bd
-MISC ChangeLog 22869 SHA256 da938c92a0da1dbfbaf1bda088f9793a38997486cb9819f4c8de7830ccaeee5f SHA512 6db76060a031dca311c621f0d6c78dac8fa4e395596a09604ec71dc7f9cd15b3c7e3537f456cae182454240341b920ae49f8489adfbf1485ba9a91c894b04212 WHIRLPOOL 72d733a9994665519eff4ba0357524c0abf0c0db33e556fa6fd092d19e215cedd10a830062eb9020f4fc562cef8cfaed57eb2daad68c3135bf5c1a0563ecc1a3
+EBUILD IO-Socket-SSL-1.840.0.ebuild 878 SHA256 dbf4dd361269b43a6d940c28fc189545f5c05a9b0bb190cedc6b340cee77a86b SHA512 3865e5b2f2fe62f6ba579666528e841c70c9ba555a0a46c54f81f55eec92c9a1c62e6ef2fb5a6f9fd3a7f676437eaa41c0d11256d52b8d9abb8b8e7cf50b76c0 WHIRLPOOL 816183cf7de7e3fc4463461d1597b7baeb1345559cdac54306a31f723bf50eb8b64d2dbeb552fa3a2b32e861dbe6a0dfde6c4116135eaea4fcadfd1291584798
+MISC ChangeLog 22999 SHA256 8564baf6c897f5ab6819c729de1accaf532ab1a830fc2d8971351be0f65f67ef SHA512 e16e49f9274452ae66f71546970b70fc4a0121b24f35cfb00e7b0b4d1b8b55e957f046dd66cfd6fcfcec956232d0140756cb4650698b828a1f0c59217ba7779f WHIRLPOOL 8762c0c998ea36abdbf9bdfe7330e84ab76039494567daecfef986249b14862512a3da226d5463e8d11eb45275826e1f1a6e7fdb62c4a77637546675277085e8
 MISC metadata.xml 527 SHA256 fe0b7ca5e1952479604eda183d6005129d6f13365861e415e9501de327e3ef74 SHA512 3e556e06e6ee6766581f59c43f72d3aae371234613b26c2d921ae24e89669e10f28c7fdd28d7b23ead713cbc5e5c77f6bb9c65e12f13258c849f019a2c86d751 WHIRLPOOL 150c0215ba6c0d01f0f3e2fa80f79ce06dd27739ca86c2f5d6df21391e357959198aac051e33397559b30b5fdb10baeb40214a084e7e78151f139b3093ae4b8c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEjCKcACgkQ/ejvha5XGaM4mQCfUkaIIBt0dZKSbOST56Rmo5H+
-+xEAniK3zjUS1xeq53W+n/VulW47Cn92
-=DUR+
+iEYEAREIAAYFAlEjqLkACgkQV3J2n04EauxHOACgonJPiyVPgVdf/uzxT0HcBQ3F
+Ca0AmwWrRc6IisXMbNj3BXtc8bmbO5nr
+=HvDT
 -----END PGP SIGNATURE-----
